agrego descripción sobre mi

--- a/index.html
+++ b/index.html
@@ -61,8 +61,7 @@
                     Diseño de Interacción
                 </h1>
                 <p class="sobremi-details">
-                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Et, pariatur minus veniam inventore illo
-                    accusantium animi reprehenderit expedita blanditiis? Ipsam!
+                    Isadora Zamora, Diseñadora ux/ui, prontamente Diseñadora de Interacción
                 </p>
                 <button class="sobremi-btn">
                     Descargar CV
