--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                     Diseño de Interacción
                 </h1>
                 <p class="sobremi-details">
-                    Isadora Zamora, Diseñadora ux/ui, prontamente Diseñadora de Interacción
+                    Isadora Zamora, Diseñadora ux/ui, prontamente Diseñadora de Interacción PUCV
                 </p>
                 <button class="sobremi-btn">
                     Descargar CV
