--- a/index.html
+++ b/index.html
@@ -61,13 +61,11 @@
                     Diseño de Interacción
                 </h1>
                 <p class="sobremi-details">
-
                     Isadora Zamora, Diseñadora ux/ui, prontamente Diseñadora de Interacción PUCV
-
                 </p>
-                <button class="sobremi-btn">
+                <button class="btn btn-primary mi-boton">
                     Descargar CV
-                </button>
+                  </button>
             </div>
             <div class="sobremi-img-section">
                 <img class="sobremi-img" src="img/fotoperfil.png" alt="diseñadora">
@@ -75,21 +73,28 @@
         </section>
     </div>
 
-    <div class="horizontal-padding vertical-padding">
-        <section class="skilss">
-            <h2 class="skills-title">Habilidades</h2>
-            <ul class="skills-list">
-                <li class="skills-skill">Figma</li>
-                <li class="skills-skill">Adobe Indesign</li>
-                <li class="skills-skill">Adobe Illustrator</li>
-                <li class="skills-skill">Adobe Photoshop</li>
-                <li class="skills-skill">CSS</li>
-                <li class="skills-skill">HTML</li>
-                <li class="skills-skill">Fusión 360</li>
-                <li class="skills-skill">AutoCAD</li>
+    <div class="container py-5">
+        <h2 class="text-center mb-4"> Habilidades </h2>
+      
+        <div class="row">
+          <!-- Columna con lista usando Flexbox -->
+          <div class="col-md-6 d-flex flex-column justify-content-center align-items-start">
+            <ul class="list-group">
+              <li class="list-group-item">Figma</li>
+              <li class="list-group-item">Adobe Indesign</li>
+              <li class="list-group-item">Adobe Illustrator</li>
+              <li class="list-group-item">Adobe Photoshop</li>
             </ul>
-        </section>
-    </div>
+          </div>
+            <!-- Columna con CSS Grid -->
+           <div class="col-md-6 habilidades-grid">
+               <div class="grid-item">CSS</div>
+             <div class="grid-item">HTML</div>
+             <div class="grid-item">Fusión 360</div>
+             <div class="grid-item">AutoCAD</div>
+           </div>
+         </div>
+         </div>
 
     <!---Footer-->
     <footer>
@@ -103,6 +108,8 @@
             </ul>
         </nav>
     </footer>
+
+    <script src="./js/main.js"></script>
 
 </body>
 
