re dirección de rutas

--- a/index.html
+++ b/index.html
@@ -41,10 +41,10 @@
                     <img src="img/close-icon" alt="cerrar menu">
                 </button>
                 <li><a href="#sobremi" class="selected">Sobre mi</a></li>
-                <li><a href="./pages/proyectospaginaswebs.html">Proyectos páginas webs</a></li>
-                <li><a href="./pages/proyectosapp.html">Proyectos apps</a></li>
-                <li><a href="./pages/proyectosinteracciondeobjetos.html">Proyectos interacción de objetos</a></li>
-                <li><a href="./pages/contacto.html">Contacto</a></li>
+                <li><a href="pages/proyectospaginaswebs.html">Proyectos páginas webs</a></li>
+                <li><a href="pages/proyectosapp.html">Proyectos apps</a></li>
+                <li><a href="pages/proyectosinteracciondeobjetos.html">Proyectos interacción de objetos</a></li>
+                <li><a href="pages/contacto.html">Contacto</a></li>
             </ul>
         </nav>
     </header>
