--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <!---header-->
     <header class="topheader">
         <nav class="topnav">
-            <a href="#" class="logo">
+            <a href="img/logoisadorazamora.png" class="logo">
                 <img height="50" width="50" src="" alt="diseñadora">
                 <div>
                     isadora zamora figueroa
