--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -20,12 +20,7 @@
     <!---header-->
     <header class="topheader">
         <nav class="topnav">
-            <a href="#" class="logo">
-                <img height="50" width="50" src="" alt="diseñadora">
-                <div>
-                    isadora zamora figueroa
-                </div>
-            </a>
+            <img src="../img/logoiz.png" alt="logo iz" width="50">
             <button class="open-menu" aria-label="Abrir menú">
                 <img src="img/hamburger-icon" alt="abrir menu">
             </button>
