contenido de las páginas

--- a/index.html
+++ b/index.html
@@ -79,43 +79,53 @@
         </section>
     </div>
 
-    <div class="container py-5">
-        <h2 class="text-center mb-4"> Habilidades </h2>
-      
-        <div class="row">
-          <!-- Columna con lista usando Flexbox -->
-          <div class="col-md-6 d-flex flex-column justify-content-center align-items-start">
-            <ul class="list-group">
-              <li class="list-group-item">Figma</li>
-              <li class="list-group-item">Adobe Indesign</li>
-              <li class="list-group-item">Adobe Illustrator</li>
-              <li class="list-group-item">Adobe Photoshop</li>
-            </ul>
+         <!-- nueva plantilla para todo -->
+         <div class="container py-5">
+          <h2 class="text-center mb-4">Habilidades</h2>
+          <div class="row d-flex justify-content-center">
+            <div class="col-auto mb-3">
+              <div class="habilidad-item">Figma</div>
+            </div>
+            <div class="col-auto mb-3">
+              <div class="habilidad-item">Illustrator</div>
+            </div>
+            <div class="col-auto mb-3">
+              <div class="habilidad-item">Photoshop</div>
+            </div>
+            <div class="col-auto mb-3">
+              <div class="habilidad-item">InDesign</div>
+            </div>
+            <div class="col-auto mb-3">
+              <div class="habilidad-item">CSS</div>
+            </div>
+            <div class="col-auto mb-3">
+              <div class="habilidad-item">HTML</div>
+            </div>
+            <div class="col-auto mb-3">
+              <div class="habilidad-item">Fusión 360</div>
+            </div>
+            <div class="col-auto mb-3">
+              <div class="habilidad-item">AutoCAD</div>
+            </div>
           </div>
-            <!-- Columna con CSS Grid -->
-           <div class="col-md-6 habilidades-grid">
-               <div class="grid-item">CSS</div>
-             <div class="grid-item">HTML</div>
-             <div class="grid-item">Fusión 360</div>
-             <div class="grid-item">AutoCAD</div>
-           </div>
-         </div>
-         </div>
+        </div>
+        
+
 
     <!---Footer-->
     <footer>
         <nav>
             <ul>
                 <li><a href="index.html">Sobre mi</a></li>
-                <li><a href="pages/proyectospaginaswebs.html">Proyectos páginas webs</a></li>
-                <li><a href="pages/proyectosapp.html">Proyectos apps</a></li>
-                <li><a href="pages/proyectosinteracciondeobjetos.html">Proyectos interacción de objetos</a></li>
+                <li><a href="pages/proyectos.html">Proyectos páginas webs</a></li>
                 <li><a href="pages/contacto.html">Contacto</a></li>
             </ul>
         </nav>
     </footer>
 
     <script src="./js/main.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+
 
 </body>
 
