--- a/pages/proyectospaginaswebs.html
+++ b/pages/proyectospaginaswebs.html
@@ -22,6 +22,10 @@
     <link rel="stylesheet" href="../css/navbar.css">
     <link rel="stylesheet" href="../css/sobremi.css">
     <link rel="stylesheet" href="../css/skills.css">
+
+    <!-- Agregar Font Awesome -->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" rel="stylesheet">
+     
   </head>
 
 <body>
@@ -56,19 +60,150 @@
     <div class="horizontal-padding vertical-padding">
         <h1>Proyecto páginas web</h1>
     </div>
-
-        <!-- Galería de imágenes desplegables -->
-        <div class="gallery">
-          <div class="photo-container" onclick="toggleExpand(this)">
-              <img src="https://via.placeholder.com/200" alt="Proyecto 1">
-          </div>
-          <div class="photo-container" onclick="toggleExpand(this)">
-              <img src="https://via.placeholder.com/200" alt="Proyecto 2">
-          </div>
-          <div class="photo-container" onclick="toggleExpand(this)">
-              <img src="https://via.placeholder.com/200" alt="Proyecto 3">
-          </div>
+  <!-- botón hacia atrás--> 
+  <a href="proyectos.html" class="btn-volver">
+    ← Volver a Proyectos
+  </a>
+    <!-- Sección de proyectos -->
+    <section class="container mt-5">
+     <h2>Proyectos Web</h2>
+     <div class="project-container">
+     <!-- Carrusel de imágenes -->
+     <h1>Proyecto 1</h1>
+     <div id="carouselExample" class="carousel slide">
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img src="/img/fotoperfil.png" class="d-block w-100" alt="Proyecto 1">
+        </div>
+        <div class="carousel-item">
+          <img src="/img/logoiz.png" class="d-block w-100" alt="Proyecto 2">
+        </div>
+        <div class="carousel-item">
+          <img src="/img/fotoperfil.png" class="d-block w-100" alt="Proyecto 3">
+        </div>
       </div>
+      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+      </button>
+      <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+      </button>
+      </div>
+  
+      <!-- Descripción del Proyecto -->
+     <div class="project-description">
+      <h2>Proyecto: [Nombre del Proyecto]</h2>
+      <p>Este proyecto fue creado con el propósito de [breve descripción de lo que lograste con el proyecto]. Aquí utilizamos las mejores prácticas de diseño UX/UI y lo implementamos con tecnologías como [menciona las tecnologías que usaste].</p>
+      <p>El objetivo principal de este trabajo fue [explicar un poco más sobre los objetivos del proyecto].</p>
+    </div>
+    </div>
+
+    <div class="tools-container">
+    <h3>Herramientas utilizadas:</h3>
+    <div class="tools-icons">
+      <!-- Íconos de herramientas -->
+      <i class="fab fa-figma" style="font-size: 40px; color: #353535;"></i> <!-- Ícono de Figma -->
+      <i class="fa fa-pen-square" style="font-size: 40px; color: #353535;"></i> <!-- Ícono de Illustrator -->
+      <i class="fa fa-pen" style="font-size: 40px; color: #353535;"></i> <!-- Ícono de Photoshop -->
+      <i class="fab fa-github" style="font-size: 40px; color: #353535;"></i> <!-- Ícono de GitHub -->
+      <i class="fab fa-git-alt" style="font-size: 40px; color: #353535;"></i> <!-- Ícono de Visual Studio -->
+    </div>
+    </div>
+
+    <div class="project-container">
+    <!-- Carrusel de imágenes -->
+     <h1>Proyecto 2</h1>
+    <div id="carouselExample" class="carousel slide">
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img src="/img/fotoperfil.png" class="d-block w-100" alt="Proyecto 1">
+        </div>
+        <div class="carousel-item">
+          <img src="/img/logoiz.png" class="d-block w-100" alt="Proyecto 2">
+        </div>
+        <div class="carousel-item">
+          <img src="/img/fotoperfil.png" class="d-block w-100" alt="Proyecto 3">
+        </div>
+      </div>
+      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+      </button>
+      <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+      </button>
+    </div>
+  
+    <!-- Descripción del Proyecto -->
+    <div class="project-description">
+      <h2>Proyecto: [Nombre del Proyecto]</h2>
+      <p>Este proyecto fue creado con el propósito de [breve descripción de lo que lograste con el proyecto]. Aquí utilizamos las mejores prácticas de diseño UX/UI y lo implementamos con tecnologías como [menciona las tecnologías que usaste].</p>
+      <p>El objetivo principal de este trabajo fue [explicar un poco más sobre los objetivos del proyecto].</p>
+    </div>
+    </div>
+
+    <div class="tools-container">
+    <h3>Herramientas utilizadas:</h3>
+    <div class="tools-icons">
+      <!-- Íconos de herramientas -->
+      <i class="fab fa-figma" style="font-size: 40px; color: #353535;"></i> <!-- Ícono de Figma -->
+      <i class="fa fa-pen-square" style="font-size: 40px; color: #353535;"></i> <!-- Ícono de Illustrator -->
+      <i class="fa fa-pen" style="font-size: 40px; color: #353535;"></i> <!-- Ícono de Photoshop -->
+      <i class="fab fa-github" style="font-size: 40px; color: #353535;"></i> <!-- Ícono de GitHub -->
+      <i class="fab fa-git-alt" style="font-size: 40px; color: #353535;"></i> <!-- Ícono de Visual Studio -->
+    </div>
+    </div>
+
+    <div class="project-container">
+    <!-- Carrusel de imágenes -->
+     <h1>Proyecto 3</h1>
+    <div id="carouselExample" class="carousel slide">
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img src="/img/fotoperfil.png" class="d-block w-100" alt="Proyecto 1">
+        </div>
+        <div class="carousel-item">
+          <img src="/img/logoiz.png" class="d-block w-100" alt="Proyecto 2">
+        </div>
+        <div class="carousel-item">
+          <img src="/img/fotoperfil.png" class="d-block w-100" alt="Proyecto 3">
+        </div>
+      </div>
+      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+      </button>
+      <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+      </button>
+    </div>
+  
+    <!-- Descripción del Proyecto -->
+    <div class="project-description">
+      <h2>Proyecto: [Nombre del Proyecto]</h2>
+      <p>Este proyecto fue creado con el propósito de [breve descripción de lo que lograste con el proyecto]. Aquí utilizamos las mejores prácticas de diseño UX/UI y lo implementamos con tecnologías como [menciona las tecnologías que usaste].</p>
+      <p>El objetivo principal de este trabajo fue [explicar un poco más sobre los objetivos del proyecto].</p>
+    </div>
+     </div>
+
+   <div class="tools-container">
+      <h3>Herramientas utilizadas:</h3>
+      <div class="tools-icons">
+      <!-- Íconos de herramientas -->
+      <i class="fab fa-figma" style="font-size: 40px; color: #353535;"></i> <!-- Ícono de Figma -->
+      <i class="fa fa-pen-square" style="font-size: 40px; color: #353535;"></i> <!-- Ícono de Illustrator -->
+      <i class="fa fa-pen" style="font-size: 40px; color: #353535;"></i> <!-- Ícono de Photoshop -->
+      <i class="fab fa-github" style="font-size: 40px; color: #353535;"></i> <!-- Ícono de GitHub -->
+      <i class="fab fa-git-alt" style="font-size: 40px; color: #353535;"></i> <!-- Ícono de Visual Studio -->
+    </div>
+     </div>
+  
+     </section>
+
 
     <!---Footer-->
     <footer>
@@ -82,6 +217,8 @@
             </ul>
         </nav>
     </footer>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
 
 </body>
 
