Normalizando los saltos de línea

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <link rel="stylesheet" href="css/navbar.css">
     <link rel="stylesheet" href="css/sobremi.css">
     <link rel="stylesheet" href="css/skills.css">
+    <link rel="stylesheet" href="css/style.css">
   </head>
 
 <body>
@@ -35,6 +36,8 @@
         <a href="index.html" class="logo">
           <img src="img/logoiz.png" alt="Logo Izadora Zamora" width="50">
         </a>
+
+        
         
         <!-- Botón para abrir menú -->
         <button class="open-menu" aria-label="Abrir menú" type="button">
