--- a/pages/proyectospaginaswebs.html
+++ b/pages/proyectospaginaswebs.html
@@ -22,6 +22,7 @@
     <link rel="stylesheet" href="../css/navbar.css">
     <link rel="stylesheet" href="../css/sobremi.css">
     <link rel="stylesheet" href="../css/skills.css">
+    <link rel="stylesheet" href="../css/style.css">
 
     <!-- Agregar Font Awesome -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" rel="stylesheet">
