arreglo de colores

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -92,17 +92,15 @@
     
 
     <!---Footer-->
-    <footer>
-        <nav>
-            <ul>
-                <li><a href="/index.html">Sobre mi</a></li>
-                <li><a href="proyectospaginaswebs.html">Proyectos páginas webs</a></li>
-                <li><a href="proyectosapp.html">Proyectos apps</a></li>
-                <li><a href="proyectosinteracciondeobjetos.html">Proyectos interacción de objetos</a></li>
-                <li><a href="contacto.html">Contacto</a></li>
-            </ul>
-        </nav>
-    </footer>
+    <footer class="footer">
+      <nav>
+          <ul>
+              <li><a href="index.html" class="contacto">Sobre mi</a></li>
+              <li><a href="pages/proyectos.html" class="contacto">Proyectos páginas webs</a></li>
+              <li><a href="pages/contacto.html" class="contacto">Contacto</a></li>
+          </ul>
+      </nav>
+  </footer>
 
 </body>
 
