--- a/index.html
+++ b/index.html
@@ -119,12 +119,12 @@
 
 
     <!---Footer-->
-    <footer>
+    <footer class="footer">
         <nav>
             <ul>
-                <li><a href="index.html">Sobre mi</a></li>
-                <li><a href="pages/proyectos.html">Proyectos páginas webs</a></li>
-                <li><a href="pages/contacto.html">Contacto</a></li>
+                <li><a href="index.html" class="contacto">Sobre mi</a></li>
+                <li><a href="pages/proyectos.html" class="contacto">Proyectos páginas webs</a></li>
+                <li><a href="pages/contacto.html" class="contacto">Contacto</a></li>
             </ul>
         </nav>
     </footer>
