--- a/pages/proyectospaginaswebs.html
+++ b/pages/proyectospaginaswebs.html
@@ -210,17 +210,15 @@
 
 
     <!---Footer-->
-    <footer>
-        <nav>
-            <ul>
-                <li><a href="/index.html">Sobre mi</a></li>
-                <li><a href="proyectospaginaswebs.html">Proyectos páginas webs</a></li>
-                <li><a href="proyectosapp.html">Proyectos apps</a></li>
-                <li><a href="proyectosinteracciondeobjetos.html">Proyectos interacción de objetos</a></li>
-                <li><a href="contacto.html">Contacto</a></li>
-            </ul>
-        </nav>
-    </footer>
+    <footer class="footer">
+      <nav>
+          <ul>
+              <li><a href="index.html" class="contacto">Sobre mi</a></li>
+              <li><a href="pages/proyectos.html" class="contacto">Proyectos páginas webs</a></li>
+              <li><a href="pages/contacto.html" class="contacto">Contacto</a></li>
+          </ul>
+      </nav>
+  </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
 
